<resources>
    <string name="app_name">PersonInfo</string>
    <string name="person_name_label">Name</string>
    <string name="person_lastname_label">Last Name</string>
    <string name="person_email_label">Email</string>
    <string name="person_details_label">Details</string>
    <string name="person_age_label">Age</string>
    <string name="person_address_label">Address</string>
    <string name="person_phone_number_label">Phone</string>
    <string name="reload">Reload</string>
    <string name="error_text">Unable to connect</string>
    <string name="loading">Loading...</string>
    <string name="subtitle_format">%1$s persons</string>
</resources>
