<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_name_label"
        />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_lastname_label"
        />

    <TextView
        android:id="@+id/person_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_age_label"
        />

    <TextView
        android:id="@+id/person_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_email_label"
        />

    <TextView
        android:id="@+id/person_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_address_label"
        />

    <TextView
        android:id="@+id/person_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_phone_number_label"
        />

    <TextView
        android:id="@+id/person_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>